# bcwithqc

./: .gitignore  CONFIG_and_GUI_DESGIN_DOC.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
bcwithqc/: __main__.py  bc_aligner.py  bc_decoders.py  bc_parser.py  config.py  count.py  count_matrix.py  main.py  misc.py  qc_metrics.py  simulate.py
examples/: cDNA.json  cDNA_paired_end_config.json  cDNA_single_end_config.json  cmd_cDNA_json.sh  cmd_gDNA_json.sh  gDNA.json  gDNA_paired_end_config.json  gDNA_single_end_config.json  pe_mini_config.json  se_mini_config.json  se_test.json  se_test_lc.json  simulate_se_mini_config.json
examples/pe_mini/: pe_mini_1_r2.txt  pe_mini_2_r1.txt  pe_mini_2_r2.txt
examples/pe_mini_genome/: pe_mini.fa  pe_mini.gtf
examples/pe_mini_genome_index/: Genome  Log.out  SA  SAindex  chrNameLength.txt  exonGeTrInfo.tab  exonInfo.tab  genomeParameters.txt  (+1 more)
tests/: inspect_files copy.py  inspect_files.py  test_01_se_mini.py  test_02_pe_mini.py  test_03_se_basic.py  test_04_pe_basic.py  test_05_se_check_output.py  test_06_pe_check_output.py  test_13_simulate_se_reads.py  test_advanced_single_end_reads.py  test_basic_single_end_reads.py  test_check_final_output.py  test_check_final_output_paired_end_serial.py  test_check_final_output_single_end_serial.py  test_fix_unknown_read_orientation.py  test_handle_intermediary_files.py  test_mini_se_STAR_out.py  test_pe_serial_basic_STAR_out.py  test_pe_serial_check_final_STAR_out.py  test_se_serial_basic_STAR_out.py  test_se_serial_check_final_STAR_out.py  test_simulate_se_reads.py
(+335 files in other folders)
